fix(sso/spnego): stop a malformed Authorization token logging a stack trace
SpnegoProvider#parseAuthHeader does not validate the token it extracts -- it
accepts any non-empty trimmed remainder -- so the strict Base64 decoder behind
SpnegoAuthScheme#getToken is what rejects a malformed one, with
IllegalArgumentException. SpnegoProvider#negotiate evaluates that decode at the
top of the method, before any scheme dispatch and before the 401 is written, so
"Negotiate ###" reaches it whatever the spnego.allow.* settings say.

getLoginCredential mapped only UnsupportedOperationException to
SsoStateException, so the decode failure stayed a plain SsoLoginException and
SsoAction logged it with logger.warn(msg, e) -- a full stack trace. /sso is
anonymous, so one crafted header per request produced one stack trace.

Map IllegalArgumentException the same way. A genuine server fault cannot arrive
as either type: initialization faults are wrapped by getAuthenticator() in a
plain SsoLoginException, which is a FessSystemException and therefore neither of
the matched types, and a broken keytab, an unreachable KDC, clock skew or a
wrong SPN surface from authenticate() as GSSException. Both keep their traces.

The message is unchanged and still masked, and SsoAction still logs one WARN
line per rejected request.